Fix a minor spacing thing

--- a/content/css/main_style.css
+++ b/content/css/main_style.css
@@ -251,7 +251,7 @@ a:hover {
 .portfolio-thumbnail {
   position: absolute;
   display: inline-block;
-  width: 33%;
+  width: 33.3333%;
 }
 
 @media only screen and (max-width: 1024px) {
