--- a/src/sass/includes/_mainViewer.scss
+++ b/src/sass/includes/_mainViewer.scss
@@ -52,7 +52,7 @@
 .portfolio-thumbnail {
 	position: absolute;
 	display: inline-block;
-	width: 33%;
+	width: 33.3333%;
 }
 
 @media only screen and (max-width: $BP_MED) {
